# autotests-ui

./: .gitignore  a.py  browser-state.json  config.py  conftest.py  index.html  main.py  playwright_authorization.py  playwright_courses.py  playwright_error.py  playwright_event.py  playwright_hover.py  playwright_js.py  playwright_keyboard.py  playwright_registration.py  playwright_registration_button.py  pyproject.toml  pytest.ini  test_simple.py
.github/workflows/: test.yml
components/: base_component.py
components/authentication/: login_form_component.py  registration_form_component.py
components/charts/: charts_view_component.py
components/courses/: course_view_component.py  course_view_menu_component.py  courses_list_toolbar_component.py  create_course_exercise_form_component.py  create_course_exercises_toolbar_component.py  create_course_form_component.py  create_course_toolbar_view_component.py
data/: behaviors.csv  behaviors.json  packages.json  suites.csv  suites.json  timeline.json
elements/: base_element.py  button.py  file_input.py  input.py  textarea.py
export/: influxDbData.txt  prometheusData.txt
fixtures/: allure.py  browser.py  pages.py
history/: history.json
pages/: base_page.py  courses_list_page.py  create_course_page.py  dashboard_page.py  login_page.py  registration_page.py
tests/: conftest.py  test_authorization.py  test_courses.py  test_dashboard.py  test_registration.py
tools/: logger.py  routes.py
widgets/: duration-trend.json  duration.json  environment.json  severity.json  status-chart.json  summary.json
(+47 files in other folders)
