[project]
name = "autotests-ui"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "allure-pytest>=2.15.0",
    "playwright>=1.55.0",
    "pydantic-settings>=2.12.0",
    "pydantic[email]>=2.12.4",
    "pytest>=8.4.2",
    "pytest-playwright>=0.7.1",
]

[tool.pytest.ini_options]
pythonpath = [
  "."
]
